removing all sikulix code to a separate project